--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "timeout-express",
   "version": "1.0.0",
   "description": "Timeout server side",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
