--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-eslint": "^7.1.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "eslint": "^3.9.1",
     "eslint-config-airbnb": "^12.0.0",
