--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,13 @@
     "node": true
   },
   "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "modules": true
+    }
+  },
   "rules": {
     "object-curly-spacing": [2, "always"],
     "strict": 0,
